snapshots/syntax/library/functions/file/fileattr/fileattr_immediate_window.snap
---
source: vb6parse/src/syntax/library/functions/file/fileattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: " "
    - kind: CallStatement
      children:
        - kind: Identifier
          text: FileAttr
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
